exports[`BusListHeader component renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#e9e9e9",
      "flexDirection": "row",
      "padding": 10,
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "gotham-rounded-book",
        },
        Object {
          "flex": 1,
          "fontSize": 15,
        },
      ]
    }>
    Type
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "gotham-rounded-book",
        },
        Object {
          "flex": 1,
          "fontSize": 15,
        },
      ]
    }>
    Line
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "gotham-rounded-book",
        },
        Object {
          "flex": 3,
          "fontSize": 15,
        },
      ]
    }>
    Destination
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "gotham-rounded-book",
        },
        Object {
          "flex": 1,
          "fontSize": 15,
        },
      ]
    }>
    Leaves
  </Text>
</View>
`;

exports[`RouteListHeader component renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#e9e9e9",
      "flexDirection": "row",
      "padding": 10,
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "gotham-rounded-book",
        },
        Object {
          "flex": 1,
          "fontSize": 15,
        },
      ]
    } />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "gotham-rounded-book",
        },
        Object {
          "flex": 3,
          "fontSize": 15,
        },
      ]
    }>
    Stop name
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "gotham-rounded-book",
        },
        Object {
          "flex": 1,
          "fontSize": 15,
        },
      ]
    }>
    Arrives
  </Text>
</View>
`;
